2011-10-16  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
	* setup.py asyncproc.py buffer.py debugger.py gdb.py netbeans.py
	posix.py vim.py: Pyclewn can debug a pyclewn gdb test case.
	* pydb.py: Fix Python issue 13183.
	* debugger.py: Fix a 'RuntimeError: dictionary changed size during
	iteration' occuring when running pdb.
	* debugger.py vim.py testsuite/*py: Use a marker in '(clewn)_console'
	instead of a file to detect the end of processing in a test case.
	* debugger.py gdbmi.py netbeans.py vim.py: Fix the testsuite on
	Windows.
	* debugger.py gdb.py misc.py vim.py testsuite/*py: Remove all the
	sleep statements in the commands that build the test cases. This
	assumes that vim has been patched with the do_sleep() function calling
	netbeans_parse_messages().
	* vim.py testsuite/test_support.py: Testsuite: wait for vim to
	terminate.
	* setup.py: Add the '--prefix' option to 'setup.py test'.
	* setup.py testsuite/*py: Skip tests conditionnaly.
	* simple.py unittest2/*py testsuite/*py: Add unittest2 to the python2
	branch.
	* setup.py testsuite/*py: Add the '--stop' option to 'setup.py test'.
	* pyclewn_install.py setup.py testsuite/*py: Do not print the
	traceback on failure of a test case from the testsuite, only on an
	error.
	* gdb.py: Fix some gdb error and warning messages are ignored.
	* gdbmi.py: Fix no breakpoint signs after setting a 'throw'
	catchpoint.
	* buffer.py debugger.py netbeans.py simple.py: Fix after starting a
	new gdb session, breakpoint signs may be placed in the wrong files.

===============================================================================
2011-08-15  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* debugger.py netbeans.py evtloop.py pydb.py: Do not send any netbeans
	command after DETACH (rework). Windows and CLEWN_PIPES: fix ^C typed
	in the console hangs the socketThread. Fix invalid file descriptor in
	select after detach.
	* misc.py evtloop.py pydb.py vim.py netbeans.py debugger.py: